# conway

./: .gitignore  README.md  pyproject.toml
conway/: cell.py  grid.py  main.py  parser.py  renderer.py
examples/: beacon.json  blinker.json  pulsar.json  toad.json
